2020_notebooks/Labs/lab_3/mygrammar/My.g4
grammar My;

@header {
	package mygrammar;
}

startSymbol	: phrase EOF
		;

phrase		: WORD
		| '(' phrase ')'
		;

WORD		: ('a' .. 'z' | 'A' .. 'Z')+
		;

WHITESPACE 	: (' ' | '\t' | '\r' | '\n')+ -> skip
		;
